--- a/cenfotec_proyecto_1-Inicio/src/public/css/Ofertas.css
+++ b/cenfotec_proyecto_1-Inicio/src/public/css/Ofertas.css
@@ -161,40 +161,6 @@ svg {
     display: none;
 }
 
-/*.sales {
-    display: flex;
-    height: fit-content;
-    margin-top: 15px;
-    margin-left: 800px;
-    align-content: center;
-    justify-content: center;
-
-}
-
-.view-sales {
-    display: flex;
-    background-color: #80C342;
-    border-radius: 6px;
-    border: none;
-    padding: 5px;
-    font-weight: bold;
-    justify-content: center;
-    transition: .5s;
-    font-size: 14px;
-    transition: .5s;
-    width: 140px;
-}
-
-.view-sales:hover {
-    cursor: pointer;
-    border-radius: 8px;
-    transform: scale(1.1) translateX(1px);
-    font-size: 15px;
-    background-color: #708f01;
-    color: white;
-}*/
-
-
 
 .sales_content {
     width: 100%;
@@ -224,11 +190,13 @@ svg {
     border-radius: 40px;
     box-shadow: 0px 0px 16px -5px black;
     padding: 30px;
-    width: 95%;
+    width: 90%;
+    max-width: 1500px;
     margin: 40px auto;
 }
 
 .item {
+    justify-self: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -237,180 +205,14 @@ svg {
     padding: 20px;
     border-radius: 12px;
     transition: .3s;
+    width: 90%;
 }
 
 .item:hover {
     box-shadow: 0px 0px 14px -4px black;
 }
 
-/*.business_title {
-    background-color: rgba(167, 167, 167, 0.3);
-    margin-left: auto;
-    border-radius: 12px;
-    height: 100px;
-    width: 350px;
-    max-height: 100px;
-    max-width: 350px;
-    padding: 10px;
-}
 
-.business_description {
-
-    height: 250px;
-    width: 350px;
-    border-radius: 12px;
-    text-align: justify;
-    margin-top: 10px;
-    max-width: 350px;
-    max-height: 250px;
-    overflow-wrap: break-word;
-    padding: 15px;
-    background-color: rgba(167, 167, 167, 0.3);
-
-}
-
-.visualize {
-    padding-left: 18px;
-    padding-bottom: 3px;
-    font-weight: bold;
-    text-align: left;
-    height: 40px;
-    width: 160px;
-    border: none;
-    font-size: 16px;
-    margin-top: 50px;
-    background-color: #8d8d8d;
-    border-radius: 6px;
-    transition: .5s;
-}
-
-.visualize:hover {
-    cursor: pointer;
-    border-radius: 8px;
-    transform: scale(1.1) translateX(8px);
-    font-size: 17px;
-    background-color: #4a4a4a;
-    color: white;
-}
-
-.carrusel {
-    margin: 0 auto;
-    position: relative;
-    top: 70px;
-    width: 400px;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-.imagenes {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    transition: transform 0.5s ease-in-out;
-}
-
-.imagenes img {
-    width: 400px;
-    height: 300px;
-}
-
-
-
-.anterior,
-.siguiente {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.2);
-    color: rgba(255, 255, 255, 0.466);
-    border: none;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-top: 4px;
-    cursor: pointer;
-    font-size: 22px;
-    z-index: 2;
-    align-content: center;
-    border-radius: 20px;
-    transition: .5s;
-}
-
-.anterior:hover,
-.siguiente:hover {
-    background-color: rgba(0, 0, 0, 0.726);
-    color: rgb(255, 255, 255);
-    transform: scale(1.1) translateY(-20px);
-
-}
-
-.anterior {
-    left: 10px;
-}
-
-.siguiente {
-    right: 10px;
-}
-
-.products {
-    height: 280px;
-    width: 380px;
-    background-color: rgba(167, 167, 167, 0.3);
-    border-radius: 12px;
-    padding: 10px;
-    justify-content: center;
-    margin-top: 80px;
-}
-
-.products_title {
-    width: fit-content;
-    height: fit-content;
-    padding: 7px;
-    margin-left: 130px;
-}
-
-.product_img {
-    width: 200px;
-    height: 150px;
-    border-radius: 12px;
-    margin-left: 80px;
-    margin-top: 6px;
-}
-
-.view-products {
-    grid-column: 1;
-    z-index: 2;
-    margin-top: 10px;
-    margin-left: 99px;
-    padding-bottom: 3px;
-    font-weight: bold;
-    text-align: center;
-    height: 40px;
-    width: 160px;
-    border: none;
-    font-size: 16px;
-    background-color: #8d8d8d;
-    border-radius: 6px;
-    transition: .5s;
-}
-
-.view-products:hover {
-    cursor: pointer;
-    border-radius: 8px;
-    transform: scale(1.1) translateX(1px);
-    font-size: 17px;
-    background-color: #4a4a4a;
-    color: white;
-}
-
-/*.business-contact {
-    background-color: aquamarine;
-    width: 20%;
-    width: fit-content;
-    height: fit-content;
-    display: ;
-}*/
 
 .offer-image {
     width: 100%;
