--- a/cenfotec_proyecto_1-Inicio/src/views/Emprendimientos/Emprendimientos.ejs
+++ b/cenfotec_proyecto_1-Inicio/src/views/Emprendimientos/Emprendimientos.ejs
@@ -92,6 +92,7 @@
 
     <!-- Contenido (se llena con JS desde /emprendimientos_publicos) -->
     <main>
+        <div type="button" class="business_owner"><a href="nuevo%20emprendimiento">Soy emprendedor</a></div>
         <section class="business_content" id="lista-emprendimientos">
             <p class="sec-vacia">Cargando...</p>
         </section>
