Update emprendimientos y ofertas

--- a/cenfotec_proyecto_1-Inicio/src/views/Ofertas/Ofertas.ejs
+++ b/cenfotec_proyecto_1-Inicio/src/views/Ofertas/Ofertas.ejs
@@ -69,6 +69,13 @@
             <label for="check" class="checkbtntext">
                 <h3 class="filter_text">Filtrar</h3>
             </label>
+            <div class="filtro-menu">
+                <a href="/ofertas" class="f-cat" data-cat="all">Todos</a>
+                <a href="/ofertas?categoria=alimentos" class="f-cat" data-cat="alimentos">Alimentos</a>
+                <a href="/ofertas?categoria=ropa" class="f-cat" data-cat="ropa">Ropa</a>
+                <a href="/ofertas?categoria=tecnologia" class="f-cat" data-cat="tecnologia">Tecnología</a>
+                <a href="/ofertas?categoria=servicios" class="f-cat" data-cat="servicios">Servicios</a>
+            </div>
         </div>
         <div class="business">
             <a class="link-to-business" href="/emprendimientos">
@@ -82,7 +89,9 @@
     <!-- Contenido dinámico de ofertas -->
     <main>
         <section class="sales_content" id="lista-ofertas">
-            <p class="sec-vacia">Cargando...</p>
+            <div class="sales_card">
+                <p class="sec-vacia">Cargando...</p>
+            </div>
         </section>
     </main>
 
