--- a/cenfotec_proyecto_1-Inicio/src/views/Ofertas/OfertasEmprendedor.ejs
+++ b/cenfotec_proyecto_1-Inicio/src/views/Ofertas/OfertasEmprendedor.ejs
@@ -69,6 +69,13 @@
             <label for="check" class="checkbtntext">
                 <h3 class="filter_text">Filtrar</h3>
             </label>
+            <div class="filtro-menu">
+                <a href="/ofertas" class="f-cat" data-cat="all">Todos</a>
+                <a href="/ofertas?categoria=alimentos" class="f-cat" data-cat="alimentos">Alimentos</a>
+                <a href="/ofertas?categoria=ropa" class="f-cat" data-cat="ropa">Ropa</a>
+                <a href="/ofertas?categoria=tecnologia" class="f-cat" data-cat="tecnologia">Tecnología</a>
+                <a href="/ofertas?categoria=servicios" class="f-cat" data-cat="servicios">Servicios</a>
+            </div>
         </div>
         <div class="business">
             <a class="link-to-business" href="/emprendimientos">
