--- a/cenfotec_proyecto_1-Inicio/src/public/css/Ofertas.css
+++ b/cenfotec_proyecto_1-Inicio/src/public/css/Ofertas.css
@@ -161,55 +161,86 @@ svg {
     display: none;
 }
 
+.filtro-menu {
+    position: absolute;
+    top: 110%;
+    /* justo debajo del mini-nav */
+    left: 0;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+#check:checked~.filtro-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+#check {
+    display: none;
+}
+
+.filtro-menu a {
+    text-decoration: none;
+    color: #333;
+    padding: 6px 12px;
+    border-radius: 4px;
+    transition: background-color 0.2s ease;
+}
+
+.filtro-menu a:hover {
+    background-color: #ddd;
+}
 
 .sales_content {
+    padding: 10px;
     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 20px;
+    /* espacio entre columnas y filas */
+    margin-bottom: 60px;
 }
 
 
-.sales_card::-webkit-scrollbar {
-    width: 8px;
-    margin-right: 10px;
-}
 
-.sales_card::-webkit-scrollbar-track {
-    background: #f1f1f100;
-    border-radius: 10px;
-}
-
-.sales_card::-webkit-scrollbar-thumb {
-    background: #88888800;
-    border-radius: 10px;
-}
 
 .sales_card {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    justify-content: center;
     background-color: white;
     border-radius: 40px;
     box-shadow: 0px 0px 16px -5px black;
-    padding: 30px;
+    padding: 20px;
     width: 90%;
-    max-width: 1500px;
+    height: 100%;
+    max-width: 500px;
+    min-width: 300px;
     margin: 40px auto;
+    transition: .3s;
 }
 
 .item {
     justify-self: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background: white;
-    box-shadow: 0px 0px 12px -6px black;
+    justify-content: center;
+    background: transparent;
+    /*box-shadow: 0px 0px 12px -6px black;*/
     padding: 20px;
     border-radius: 12px;
-    transition: .3s;
-    width: 90%;
+    width: 100%;
+    height: 100%;
 }
 
-.item:hover {
-    box-shadow: 0px 0px 14px -4px black;
+.sales_card:hover {
+    box-shadow: 0px 0px 20px -1px black;
 }
 
 
