--- a/src/views/Reportes/reportes.html
+++ b/src/views/Reportes/reportes.html
@@ -179,15 +179,15 @@
     <div class="contenido-pestana" id="mis_reportes">
       <div class="tabla-contenedor">
         <table class="tabla-reportes">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Tipo</th>
-              <th>Título</th>
-              <th>Fecha</th>
-              <th>Estado</th>
-            </tr>
-          </thead>
+            <thead>
+              <tr>
+                <th>Tipo</th>
+                <th>Título</th>
+                <th>Fecha</th>
+                <th>Estado</th>
+                <th>Motivo</th>
+              </tr>
+            </thead>
           <tbody>
           </tbody>
         </table>
