--- a/src/public/css/Emprendimientos.css
+++ b/src/public/css/Emprendimientos.css
@@ -185,6 +185,11 @@ body {
     padding: 20px;
     flex-wrap: wrap;
     align-items: center;
+    transition: .3s;
+}
+
+.business_card:hover {
+    box-shadow: 0px 0px 20px -3px black;
 }
 
 /*.column,
