--- a/src/public/css/Ofertas.css
+++ b/src/public/css/Ofertas.css
@@ -214,7 +214,7 @@ svg {
 
 .sales_card {
     justify-content: center;
-    background-color: white;
+    background-color: rgb(224, 224, 224);
     border-radius: 40px;
     box-shadow: 0px 0px 16px -5px black;
     padding: 20px;
